[package]
name = "ruxc"
version = "1.0.0"
authors = ["Daniel-Constantin Mierla <miconda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ureq = "2.3"
url = "2.2"
rustls = {version = "0.20", features = ["dangerous_configuration"]}

[lib]
name = "ruxc"
path = "src/ruxc.rs"
crate-type = ["staticlib", "cdylib"]
